<resources>
    <string name="app_name">ProfileDetails</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="view_all">View All</string>
    <string name="age">Age</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="join_date">Join Date</string>
    <string name="destination">Destination</string>
    <string name="leader_name">Leader Name</string>
    <string name="leader_id">leader id</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="employee_id">Employee Id</string>
    <string name="enter_employee_id">Enter Employee ID</string>
    <string name="enter_the_age">Enter the Age</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="submit">Submit</string>
    <string name="supervisor">Supervisor</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_10_digit_only">Enter 10 digit only</string>
    <string name="email_id">Email ID</string>
    <string name="submit_go">Submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="city">City</string>
    <string name="select_date">Select Date</string>
    <string name="personal_details">Personal Details</string>
    <string name="other_details">Other Details</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sub_group">Member</string>
    <string name="text">text</string>
    <string name="child">Expand</string>
    <string name="personal_information">Personal Information</string>
    <string name="others">Others</string>
    <string name="contact_information">Contact Information</string>
    <string name="contact_number">Mobile Number</string>
    <string name="e_mailaddress">E-MailAddress</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="employee_information">Employee Information</string>
    <string name="designation">Designation</string>
    <string name="reporting_to">Reporting To</string>
    <string name="date_of_join">Date of Join</string>
    <string name="status">Status</string>
    <string name="active">Active</string>
    <string name="in_active">In-Active</string>
</resources>
