<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/employee_id"
            android:orientation="vertical"
            app:boxStrokeColor="#defede"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="@dimen/cardview_compat_inset_shadow"
            app:endIconMode="none"
            
            app:errorEnabled="true"
            app:helperText="*Required"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/employeeId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:singleLine="true"
                android:textSize="20sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/first_name"
            android:orientation="vertical"
            app:boxStrokeColor="#defede"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="@dimen/cardview_compat_inset_shadow"
            app:endIconMode="none"
            app:errorEnabled="true"
            app:helperText="*Required"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:singleLine="true"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/last_name"
            android:orientation="vertical"
            app:boxStrokeColor="#defede"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="@dimen/cardview_compat_inset_shadow"
            app:endIconMode="none"
            app:errorEnabled="true"
            app:helperText="*Required"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:singleLine="true"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/age"
            android:orientation="vertical"
            app:boxStrokeColor="#defede"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="@dimen/cardview_compat_inset_shadow"
            app:endIconMode="none"
            app:errorEnabled="true"
            app:helperText="*Required"
            app:hintEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <RadioButton
                android:id="@+id/male"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:text="@string/female" />

        </RadioGroup>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/date_of_birth"
                app:boxStrokeColor="#defede"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="@dimen/cardview_compat_inset_shadow"
                app:endIconMode="none"
                app:errorEnabled="true"
                app:helperText="*Required"
                app:hintEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dobDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="date"
                    android:singleLine="true"
                    android:textSize="17sp" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dobDateButton"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/select_date"
                android:textSize="17sp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/city"
            android:orientation="vertical"
            app:boxStrokeColor="#defede"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="@dimen/cardview_compat_inset_shadow"
            app:endIconMode="none"
            app:errorEnabled="true"
            app:helperText="*Required"
            app:hintEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:singleLine="true"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/destination"
            android:orientation="vertical"
            app:boxStrokeColor="#defede"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="@dimen/cardview_compat_inset_shadow"
            app:endIconMode="none"
            app:errorEnabled="true"
            app:helperText="*Required"
            app:hintEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:singleLine="true"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="17sp" />
    </LinearLayout>

</ScrollView>