<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.novatium.android.profiledetails.model.UserDetails" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        tools:context=".activities.GenreticActivity">

        <LinearLayout
            android:id="@+id/profileView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatSpinner
                    android:layout_weight="1"
                    android:id="@+id/employeeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:text="@string/delete"
                    android:id="@+id/delete_query"
                    android:layout_marginStart="20dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:text="@string/personal_details"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/first_name"
                app:boxStrokeColor="#defede"
                app:boxStrokeWidth="2dp"
                app:endIconMode="none"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:text="@{user.firstName}"
                    android:fontFamily="@font/roboto_regular"
                    android:singleLine="true"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/last_name"
                app:boxStrokeColor="#defede"
                app:boxStrokeWidth="2dp"
                app:endIconMode="none"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@{user.lastName}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/roboto_regular"
                    android:singleLine="true"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/age"
                app:boxStrokeColor="#defede"
                app:boxStrokeWidth="2dp"
                app:endIconMode="none"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@{String.valueOf(user.age)}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/roboto_regular"
                    android:singleLine="true"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/date_of_birth"
                app:boxStrokeColor="#defede"
                app:boxStrokeWidth="2dp"
                app:endIconMode="none"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@{user.DOB}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/roboto_regular"
                    android:singleLine="true"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/gender"
                app:boxStrokeColor="#defede"
                app:boxStrokeWidth="2dp"
                app:endIconMode="none"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@{user.gender}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/roboto_regular"
                    android:singleLine="true"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/mobile_number"
                app:boxStrokeColor="#defede"
                app:boxStrokeWidth="2dp"
                app:endIconMode="none"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@{String.valueOf(user.mobileNumber)}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/roboto_regular"
                    android:singleLine="true"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/location"
                app:boxStrokeColor="#defede"
                app:boxStrokeWidth="2dp"
                app:endIconMode="none"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@{user.location}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/roboto_regular"
                    android:singleLine="true"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email_id"
                app:boxStrokeColor="#defede"
                app:boxStrokeWidth="2dp"
                app:endIconMode="none"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@{user.emailId}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/roboto_regular"
                    android:singleLine="true"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:text="@string/other_details"
                android:textStyle="bold"
                android:textSize="25sp"
                style="@style/Widget.MaterialComponents.TextView"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/destination"
                app:boxStrokeColor="#defede"
                app:boxStrokeWidth="2dp"
                app:endIconMode="none"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@{user.destination}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/roboto_regular"
                    android:singleLine="true"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/join_date"
                app:boxStrokeColor="#defede"
                app:boxStrokeWidth="2dp"
                app:endIconMode="none"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@{user.joinDate}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/roboto_regular"
                    android:singleLine="true"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/supervisor"
                app:boxStrokeColor="#defede"
                app:boxStrokeWidth="2dp"
                app:endIconMode="none"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@{user.supervisorName}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/roboto_regular"
                    android:singleLine="true"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/status"
                app:boxStrokeColor="#defede"
                app:boxStrokeWidth="2dp"
                app:endIconMode="none"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:text="@{user.status}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:fontFamily="@font/roboto_regular"
                    android:singleLine="true"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>




        </LinearLayout>
    </ScrollView>
</layout>