<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/supervisor"
            android:textAlignment="center"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/supervisor"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="17sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/mobile_number"
            android:orientation="vertical"
            app:boxStrokeColor="#defede"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="@dimen/cardview_compat_inset_shadow"
            app:endIconMode="none"
            app:errorEnabled="true"
            app:helperText="*Required"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobileNumber"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:singleLine="true"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/join_date"
                app:boxStrokeColor="#defede"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="@dimen/cardview_compat_inset_shadow"
                app:endIconMode="none"
                app:errorEnabled="true"
                app:helperText="*Required"
                app:hintEnabled="true">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/joinDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="date"
                    android:singleLine="true"
                    android:textSize="17sp" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/joinDateButton"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/select_date"
                android:textSize="17sp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email_id"
            android:orientation="vertical"
            app:boxStrokeColor="#defede"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="@dimen/cardview_compat_inset_shadow"
            app:endIconMode="none"
            app:errorEnabled="true"
            app:helperText="*Required"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mailId"
                android:layout_width="match_parent"
                android:inputType="textWebEmailAddress"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:singleLine="true"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/status"
            android:orientation="vertical"
            app:boxStrokeColor="#defede"
            app:boxStrokeWidth="2dp"
            app:boxStrokeWidthFocused="@dimen/cardview_compat_inset_shadow"
            app:endIconMode="none"
            app:errorEnabled="true"
            app:helperText="*Required"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:singleLine="true"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button"
            android:id="@+id/submit_go"
            android:text="@string/submit_go"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:textAlignment="center"
            android:textSize="17sp" />

    </LinearLayout>

</ScrollView>